# eenvader.fractal

./: .gitignore  Makefile.am  README  configure.ac  eenvaders.c  eenvaders.edc  eenvaders_edje_external.c  makefile
data/: Makefile.am  eenvaders.edc
src/: Makefile.am  eenvaders.c  eenvaders_edje_external.c  eenvaders_evas_smart.c
